# limbus

./: ,yd  .drone.yml  .env.example  .gitignore  .yarnrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  alembic_helpers.sh  bash2fish.py  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.traefik.yml  docker-compose.yml  docker-helpers.sh  docker_helpers.sh  dockercmd.txt  helpers-docker.sh  helpers.fish  helpers.sh  index.html  misc.py  navbar.css  navtree.js  package-lock.json  package.json  pyproject.toml  requirements.txt
services/: __init__.py  pyproject.toml
services/nginx/: Dockerfile  nginx.conf  nginx.tmpl
services/nginx/vhost.d/: default
services/systemd/: limbus-dumpdb.service  limbus.service
services/web/: .yarnrc  Dockerfile  Dockerfile.production  config.py  dumpdb.py  package.json  pyproject.toml  requirements.txt  run.py  test_basic.py
services/web/app/: FormEnum.py  __init__.py  base.py  csp.py  database.py  decorators.py  generators.py  mail.py  mixins.py  validators.py  webarg_parser.py
services/web/app/admin/: __init__.py  api.py  enums.py  forms.py  mail.py  routes.py  views.py
services/web/app/api/: __init__.py  filters.py  generics.py  responses.py
services/web/app/attribute/: .routes.py.swp  __init__.py  api.py  enums.py  forms.py  models.py  routes.py  views.py
services/web/app/auth/: __init__.py  api.py  email.py  enums.py  forms.py  models.py  routes.py  views.py
services/web/app/codegenerator/: __init__.py
services/web/app/commands/: __init__.py  setup.py
services/web/app/consent/: __init__.py  api.py  enums.py  forms.py  models.py  routes.py  views.py
services/web/app/container/: __init__.py  api.py  (+5 more)
services/web/instance/: config.py
services/web/migrations/: env.py
services/web/tests/: __init__.py  test_auth.py  test_basic.py  test_document.py
(+738 files in other folders)
