[tool.poetry]
name = "limbus"
version = "22.02"
description = "LImBuS is an open source, standards compliant Biobank Information Management System developed by researchers from Aberystwyth University."
authors = ["KeironO <keiron.oshea@gmail.com>"]
license = "GPL-3.0 License"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
