[tool.poetry]
name = "limbus"
version = "22.03"
description = "LImBuS is an open source, standards compliant Biobank Information Management System developed by researchers from Aberystwyth University."
authors = ["KeironO <keiron.oshea@gmail.com>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
